- tools/tos-lang-change.c: Added missing languages. (patch by Dima Sobolev
  + vriviere)
- country.mk, bios/country.h, bios/ctrycodes.h, bios/fnt_ru_6x6.c,
  bios/fnt_ru_8x16.c, bios/fnt_ru_8x8.c, bios/keyb_ru.h, po/LINGUAS,
  po/ru.po, tools/tos-lang-change.c: Added Russian language. (patch by
  Dima Sobolev)

2010-09-25
- bios/iorec.h: Added a workaround for GCC 4.5.x bug 45052. Because of that,
  the keyboard didn't work when USE_STOP_INSN_TO_FREE_HOST_CPU=0. If unsure,
  compile with -fno-ipa-pure-const as full workaround. That bug will be
  fixed in GCC 4.5.2. (vriviere)

2010-09-29
- bios/ikbd.c: Added key click on key repeat. (vriviere)

2010-10-02
- bdos/bdosmain.c, bdos/console.c, cli/command.c: Fixed BDOS and EmuCON to
  allow the usage of the full 8-bit character set on console I/O. (vriviere)
- bios/xhdi.c: For unimplemented XHDI opcodes, return EINVFN instead of ERR.
  Patch contributed by David Galvez. (vriviere)

2010-10-25
- bios/natfeat.S, bios/xhdi.c, bios/xhdi.h: Reimplemented the XHDI stub to
  backup all the registers to conform to the XHDI specification. (vriviere)

2010-10-26
- bdos/umem.c: Fixed Malloc() and Mxalloc() to return blocks aligned on
  multiple of 4 bytes. Long alignment improves speed in FastRam. (vriviere)

2010-11-02
- bdos/iumem.c, bdos/umem.c: Improved traces on memory management. (vriviere)
- bdos/iumem.c, bdos/umem.c, bios/biosmem.c: Really fix Malloc() and others
  for 4-byte alignment. The previous patch was not enough. (vriviere)

2010-11-06
- bios/bios.c: Fixed a small memory leak when there is no bootstrap program.
  (vriviere)
- bdos/proc.c, bios/bios.c: Fixed a memory leak and a crash when the
  relocation of the bootstrap program fails. (vriviere)
- bios/bios.c: Fixed a memory leak when the bootstrap program finishes
  successfully. (vriviere)
- tools/mkflop.c: Added a check for the size of ramtos.img when doing
  "make flop". (vriviere)
- bios/bios.c: Show the init screen when EmuTOS is loaded from RAM. (vriviere)